// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawWall draws 1`] = `
<canvas
  data-snapshot-image="6d45f1133f988f5d39981757d5ab4f0ae72919e7493a05243aa87c64ee1d2fbf7fc7cd694c3cb1ec21dfe7a50f9eaab070ff92673f1bf43390aa6463f1362fb0"
  height="500"
  width="800"
/>
`;

exports[`DrawWall draws_info 1`] = `
<canvas
  data-snapshot-image="b3147372c8b03936d899423d6624f50b4e7d539318ea28cc2b147551562572cb96a33535b80e932e6a4a07556d0754bee04be6c9f95e60a6505abdc586388e35"
  height="500"
  width="800"
/>
`;
